--- a/web.xml
+++ b/web.xml
@@ -36,6 +36,10 @@
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>LoginServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>DestroySession</servlet-name>
+        <servlet-class>DestroySession</servlet-class>
+    </servlet>
 
     <servlet-mapping>
         <servlet-name>CreateTask</servlet-name>
@@ -68,5 +72,9 @@
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/loginServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DestroySession</servlet-name>
+        <url-pattern>/destroysession</url-pattern>
     </servlet-mapping>
 </web-app>
